#28 Fixing overflowing large text

--- a/grails-app/assets/stylesheets/doi.css
+++ b/grails-app/assets/stylesheets/doi.css
@@ -132,3 +132,7 @@ li>p.help-block {
 .padding-bottom-20 {
     padding-bottom: 20px;
 }
+
+.break-word {
+    overflow-wrap: break-word;
+}
